# DuskAutoScript

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  readme.md
das/: CMakeLists.txt
das/AdditionalTest/: DasPtrTest.cpp  DasRefTest.cpp  ICUTest.cpp  NlohmannJsonEnumTest.cpp  StdexecTest.cpp
das/Core/: CMakeLists.txt
das/Core/CoreServices/src/: CoreServicesImpl.cpp
das/Core/Debug/src/: DebugCaptureDecorator.cpp  DebugCvDecorator.cpp  DebugImageAnnotator.cpp  DebugInputDecorator.cpp  DebugInputFactoryDecorator.cpp  DebugInputFactoryDecorator.h  DebugOcrDecorator.cpp  DebugRuntime.cpp  DebugWriterImpl.cpp  DebugWriterImpl.h
das/Core/Debug/test/: DebugCvOcrDecoratorTest.cpp  DebugDecoratorTest.cpp  DebugEndToEndTest.cpp  DebugImageAnnotationTest.cpp  DebugIntegrationTest.cpp
das/Core/Exceptions/src/: DasException.cpp  DasExceptionSupport.cpp  GlobalErrorMessages.cpp  InterfaceNotFoundException.cpp  InvalidGuidStringException.cpp  PythonException.cpp  TypeError.cpp
das/Core/Exceptions/test/: DasExceptionHandleTest.cpp  DasExceptionTest.cpp  GlobalErrorMessagesTest.cpp  IDasExceptionStringTest.cpp
das/Core/ForeignInterfaceHost/include/: IpcTestConfig.h
das/Core/ForeignInterfaceHost/src/: CSharpHost.cpp  CSharpHost.h  CSharpHostFxrBackend.cpp  CSharpHostFxrBackend.h  CSharpManifest.cpp  CSharpNetFxBackend.cpp  CSharpNetFxBackend.h  ComponentFactoryManager.cpp  CppHost.cpp  CppHost.h  CppSwigInterop.cpp  DasGuid.cpp  DasStringImpl.cpp  DasSwigApi.cpp  ErrorLensManager.cpp  ForeignInterfaceHost.cpp  IDasBase.cpp  IDasCaptureManagerImpl.cpp  IDasGuidVectorImpl.cpp  IDasInputFactoryVectorImpl.cpp  IDasInputManagerImpl.cpp  IDasPlugin.cpp  IDasPluginManagerImpl.cpp  IDasPluginPackage.cpp  IDasStringVectorImpl.cpp  IForeignLanguageRuntime.cpp  InputFactoryManager.cpp  IpcRemotePluginHost.cpp  JavaHost.cpp  JavaHost.h  LuaHost.cpp  LuaHost.h  NativeIpcRuntime.cpp  NodeRuntime.cpp  Plugin.cpp  PluginManager.cpp  PluginManagerServiceImpl.cpp  PluginResourceIndex.cpp  PluginScanner.cpp  PluginZipExtractor.cpp  (+6 more)
das/Core/ForeignInterfaceHost/test/: CSharpHostBackendTest.cpp  CSharpHostManifestTest.cpp  CSharpHostRoutingTest.cpp  ComponentFactoryManagerTest.cpp  CppPluginLoadTest.cpp  DasStringNullTerminationTest.cpp  ErrorLensManagerTest.cpp  IpcRemotePluginHostTest.cpp  NodeRuntimeTest.cpp  PluginDescTest.cpp  PluginManagerTest.cpp  PythonHostTest.cpp  TaskComponentFactoryManagerTest.cpp  TestablePluginManager.h
das/Core/GraphRuntime/src/: AuthoringDocContract.cpp  CompiledArtifact.cpp  DoAdapter.cpp  ExtractSubgraph.cpp  GraphAuthoring.cpp  GraphCompiler.cpp  GraphDocument.cpp  GraphRuntime.cpp  GraphRuntimeFactory.cpp  LegacyJsonAdapter.cpp  PortFrame.cpp  RefManager.cpp  RuntimeExecutionCache.cpp  SubgraphCompiler.cpp
das/Core/GraphRuntime/test/: AuthoringDocContractTest.cpp  CompiledArtifactTest.cpp  DoAdapterTest.cpp  E2EGraphFlowTest.cpp  EdgeCaseCoverageTest.cpp  ExtractSubgraphTest.cpp  GraphAuthoringSessionTest.cpp  GraphAuthoringTest.cpp  GraphCompilerTest.cpp  GraphDocumentTest.cpp  GraphRuntimeFactoryTest.cpp  GraphRuntimeScaffoldTest.cpp  GraphRuntimeTest.cpp  LegacyJsonAdapterTest.cpp  PortFrameTest.cpp  RefManagerTest.cpp  RuntimeExecutionCacheTest.cpp  SubgraphCompilerTest.cpp  SubgraphExtractRefTest.cpp
das/Core/IPC/: CMakeLists.txt
das/Core/IPC/src/: AnyTransport.cpp  BusinessControlRequestRaw.cpp  BusinessThread.cpp  ConnectionManager.cpp  DasReadOnlyStringProxy.cpp  DasReadOnlyStringStub.cpp  DasVariantVectorByValueProxy.cpp  DasVariantVectorByValueStub.cpp  DistributedObjectManager.cpp  ForwardingRouter.cpp  Handshake.cpp  HandshakeClient.cpp  HostLauncher.cpp  HttpHost.cpp  HttpIpcClient.cpp  HttpIpcServer.cpp  HttpIpcTransport.cpp  IPCProxyBase.cpp  IStubBase.cpp  InterfaceParamSerialization.cpp  InternalCallbackHandler.cpp  IpcCommandHandler.cpp  IpcLoadPlugin.cpp  IpcPermissions.cpp  IpcResponseSender.cpp  IpcRunLoop.cpp  IpcTimeoutConfig.cpp  IpcTransport.cpp  MainProcessServer.cpp  ManualProxyRegistry.cpp  MessageQueueTransport.cpp  ObjectManager.cpp  ProxyFactory.cpp  (+6 more)
das/Core/test/: lua_director_lifecycle_test.cpp
das/Gateway/: CMakeLists.txt
das/Gateway/src/: Config.cpp  IDasSettingsImpl.cpp  Logger.cpp  ProfileManager.cpp  dllmain.cpp
das/Host/: CMakeLists.txt
das/Host/src/: main.cpp
das/Http/: CMakeLists.txt
das/Http/src/: App.cpp  AppComponent.hpp  Config.h  NotificationHub.cpp  NotificationHub.hpp
das/IpcMultiProcessTest/: CMakeLists.txt
das/IpcMultiProcessTest/test/: BenchmarkStats.h  FakeMainProcess.cpp  FakeMainProcess.h  IpcMultiProcessTestBasic.cpp  IpcMultiProcessTestBasic.h  IpcMultiProcessTestCommon.h  IpcMultiProcessTestIntegration.cpp  IpcMultiProcessTestIntegration.h  IpcPerformanceTest.cpp  IpcTestConfig.h  IpcTestHostHelper.h  main.cpp
das/Plugins/: CMakeLists.txt
das/Plugins/AsrAdbCapture/: DasAdbCapture.json
das/Plugins/CSharpTestPlugin/: CMakeLists.txt  CSharpTestPlugin.csproj  CSharpTestPlugin.json  CSharpTestPlugin.net48.json.in  CSharpTestPlugin.net8.json.in
das/Plugins/DasAdbTouch/: DasAdbTouch.json
das/Plugins/DasFlowControl/: DasFlowControl.json
das/Plugins/DasGraphTask/: CMakeLists.txt  DasGraphTask.json
das/Plugins/DasMaaPi/: CMakeLists.txt  DasMaaPi.json
das/Plugins/DasWindowsCapture/: DasWindowsCapture.json
das/Plugins/GraphTask/: CMakeLists.txt  GraphTask.json
das/Plugins/IpcTestPlugin/: IpcTestPlugin.json
das/Plugins/IpcTestPlugin1/: IpcTestPlugin1.json
das/Plugins/IpcTestPlugin2/: IpcTestPlugin2.json
das/Plugins/JavaTestPlugin/: CMakeLists.txt  JavaTestPlugin.json
das/Plugins/LuaTestPlugin/: CMakeLists.txt  LuaTestPlugin.json  LuaTestPlugin.lua
das/Plugins/NodeTestPlugin/: CMakeLists.txt  NodeTestPlugin.cjs  NodeTestPlugin.json  package.json
das/Plugins/PythonTestPlugin/: CMakeLists.txt  manifest.json  python_test_plugin.py
das/Plugins/SchedulerTestPlugin/: SchedulerTestPlugin.json
das/Utils/src/: Expected.cpp  StringUtils.cpp  ThreadUtils.cpp  UnexpectedEnumException.cpp
das/_shims/: ciso646.h
(+804 files in other folders)
